# soteria

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  build.rs  default.nix  flake.nix  package.nix
.github/: FUNDING.yml
.github/workflows/: lint.yml
po/: ne.po  soteria.pot  zh_CN.po  zh_TW.po
resources/: soteria.ui
src/: authority.rs  config.rs  constants.rs  dbus.rs  events.rs  main.rs  state.rs  ui.rs
src/resources/: soteria.ui
