[package]
name = "soteria"
version = "0.1.4"
authors = ["Vaskel"]
edition = "2021"
rust-version = "1.83"
description = "Soteria is a Polkit authentication agent written in GTK"
readme = "README.md"
repository = "https://github.com/imvaskel/soteria"
license = "Apache-2.0"

[dependencies]
etc-passwd = "0.2.0"
eyre = "0.6.12"
figment = { version = "0.10.18", features = ["toml"] }
gtk4 = { version = "0.9.6", features = ["v4_10"] }
serde = { version = "1.0.201", features = ["serde_derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "std",
  "fmt",
  "env-filter",
  "ansi",
] }
zbus = { version = "5.7.1", default-features = false, features = ["tokio"] }
